# noccstackssc

./: README.md  pyproject.toml
src/noccstacksv2/: crew.py  main.py
src/noccstacksv2/config/: agents.yaml  tasks.yaml
src/noccstacksv2/tools/: custom_tool.py
